# sneakysnakes

./: Cargo.toml  flake.nix
.github/workflows/: deploy-pages.yml  format-checks.yml  nix-build.yml  rustfmt.yml
src/: main.rs
wasm/: index.html
