[package]
name = "sneakysnakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", features = [ "wayland" ] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", version = "0.4.0-rc.1" }
rand = "0.8.5"

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
